[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bcs = "0.1"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
serde_json = "1.0"
tokio = "1.47"

iota-types = { git = "https://github.com/iotaledger/iota", tag = "v1.16.1-beta", package = "iota-types" }
iota-sdk = { git = "https://github.com/iotaledger/iota", tag = "v1.16.1-beta", package = "iota-sdk" }